--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "tymon/jwt-auth": "0.5.*",
         "venturecraft/revisionable": "1.*"
     },
     "require-dev": {
