--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,14 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
+    "minimum-stability": "dev",
+    "prefer-stable" : true,
     "require": {
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "tymon/jwt-auth": "0.5.*",
+        "tymon/jwt-auth": "1.0.*",
         "venturecraft/revisionable": "1.*"
     },
     "require-dev": {
